# rye-project-tst

./: README.md  pyproject.toml
src/rye_project_tst/: __init__.py
