[project]
name = "rye-project-tst"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "jojo", email = "jcechovs@cisco.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "rye_project_tst:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rye_project_tst"]
